# tawreed

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  PROJECT.md  README.md  SECURITY.md  SKILL.md  generate_sample_boq.py  index.html  main.py  main.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_boq.xlsx  tawreed.spec  tawreed_backend.py  test_core.py  tsconfig.json  verify_imports.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
_scripts/: README.md  build-windows.bat
build_scripts/: package.py
core/: ai.py  db.py  excel.py  i18n.py  logging_setup.py  model_catalog.py  reset.py  test_core.py
docs/: INSTALL.md
docs/superpowers/plans/: 2026-05-24-tawreed-explainer-video.md  2026-05-24-tawreed-teaser-video.md  2026-05-24-tawreed-upgrades.md  2026-05-26-agentic-takeoff-workbench.md  2026-05-27-frameless-resize-and-splash-color.md  2026-05-27-system-health-check.md  2026-05-27-tauri-rust-migration.md  2026-05-27-tawreed-launch-remotion.md  2026-05-28-tawreed-scratch-rebuild.md  2026-06-05-slab-boq-slicer-plan.md  2026-06-06-boq-restructure.md  2026-06-06-centralized-outputs.md  2026-06-06-realtime-feedback.md  2026-06-06-tawreed-phase1-plan.md  2026-06-06-tawreed-phase2-plan.md  2026-06-06-tawreed-redesign-plan.md
docs/superpowers/specs/: 2026-05-24-output-refinement-design.md  2026-05-24-tawreed-explainer-video-design.md  2026-05-24-tawreed-teaser-design.md  2026-05-24-tawreed-upgrades-design.md  2026-05-25-video-launch-design.md  2026-05-26-agentic-takeoff-design.md  2026-05-27-system-health-check-design.md  2026-05-27-tauri-rust-migration.md  2026-05-27-tawreed-launch-remotion-design.md  2026-05-27-workspace-diagnostics-ui-design.md  2026-05-27-workspace-wizard-ui-design.md  2026-05-28-tawreed-scratch-design.md  2026-06-05-slab-boq-slicer-design.md  2026-06-06-agentic-terminal-ux-design.md  2026-06-06-boq-structure-design.md  2026-06-06-centralized-outputs-design.md  2026-06-06-tawreed-design.md  2026-06-06-tawreed-redesign.md
gui/: app.js  assets.py  index.html  main_window.py  single_app.py  splash.py  style.css  styles.py  worker.py
gui/pages/: __init__.py  about_page.py  history_page.py  settings_page.py  workspace_page.py
gui/themes/: tawreed_dark.qss
gui/widgets/: __init__.py  chrome.py
src/: App.tsx
src-tauri/: 2  Cargo.toml  build_test.cjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_service.rs  commands.rs  config.rs  exporter.rs  lib.rs  main.rs  parsers.rs  processor.rs  system.rs
src-tauri/tests/: integration_tests.rs
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
tawreed_app/: __init__.py  __main__.py
tests/: conftest.py  test_assets.py  test_e2e_pipeline.py  test_excel_errors.py  test_excel_parsing.py  test_i18n.py  test_model_catalog.py  test_provider_factory.py  test_reset.py  test_settings_migration.py  test_single_app.py  test_single_app_pid.py  test_streaming.py  test_theme_loader.py
video-launch/: package-lock.json  package.json  remotion.config.ts
video-launch/src/: Root.tsx  TawreedLaunch.tsx  index.css
video-launch/src/components/: Captions.tsx
video-launch/src/scenes/: Scene1.tsx  Scene2.tsx  Scene3.tsx  Scene4.tsx  Scene5.tsx  Scene6.tsx  Scene7.tsx  Scene8.tsx
