[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tawreed"
version = "0.0.1"
description = "AI-driven BOQ work-package extraction for construction QSs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Kareem Safwat", email = "kareem@kareemsafwat.com" },
]
keywords = ["boq", "construction", "ai", "pyside6", "quantity-surveying"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
]

# Runtime dependencies. Pinned to known-good minimums; soft upper
# bounds so uv/pip can resolve future minor versions but block
# surprise major bumps.
dependencies = [
  "PySide6>=6.6,<7",
  "qasync>=0.27",
  "openai>=1.30,<3",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pyinstaller>=6.0",
]

[project.scripts]
# Console entry point so `pip install -e .` puts a `tawreed` shim
# on PATH. This calls the same _run() as `python main.py` and
# `python -m tawreed_app`.
tawreed = "main:_run"

[project.urls]
Repository = "https://github.com/sfkareem/tawreed"
Issues = "https://github.com/sfkareem/tawreed/issues"

[tool.setuptools]
# The package is tawreed_app/, and the gui/ and core/ directories at the
# root are also packages. Tell setuptools to find them all.
packages = ["tawreed_app", "gui", "gui.pages", "core"]

[tool.setuptools.package-data]
# The .qss theme files ship with the wheel.
"gui.themes" = ["*.qss"]
# PyInstaller spec lives at the root and shouldn't go in the wheel,
# but the .png / .ico assets need to.
"." = ["tawreed_logo*.png", "tawreed_logo.ico"]

[tool.pytest.ini_options]
# Belt-and-braces; tests/pytest.ini also exists for repos that
# run pytest without the package installed.
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
