[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tawreed"
version = "0.0.1"
description = "AI-driven BOQ work-package extraction for construction QSs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Kareem Safwat", email = "kareem@kareemsafwat.com" },
]
keywords = ["boq", "construction", "ai", "pyside6", "quantity-surveying"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
]

# Runtime dependencies. Pinned to known-good minimums; soft upper
# bounds so uv/pip can resolve future minor versions but block
# surprise major bumps.
dependencies = [
  "PySide6>=6.6,<7",
  "qasync>=0.27",
  "openai>=1.30,<3",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pyinstaller>=6.0",
]

[project.scripts]
# Console entry point so `pip install -e .` puts a `tawreed` shim
# on PATH. This calls the same _run() as `python main.py` and
# `python -m tawreed_app`.
tawreed = "main:_run"

[project.urls]
Repository = "https://github.com/sfkareem/tawreed"
Issues = "https://github.com/sfkareem/tawreed/issues"

[tool.setuptools]
# The package is tawreed_app/, and the gui/ and core/ directories at the
# root are also packages. Tell setuptools to find them all.
packages = ["tawreed_app", "gui", "gui.pages", "core"]

[tool.setuptools.package-data]
# The .qss theme files ship inside the gui/ package. The key MUST
# be a top-level package name (setuptools forbids dotted keys in
# package-data); subpackage data is matched by glob. The PNG/ICO
# assets live at the repo root and are only consumed at run time
# from the source tree (or bundled by PyInstaller), so they are
# intentionally NOT shipped in the wheel.
"gui" = ["themes/*.qss"]

[tool.pytest.ini_options]
# Belt-and-braces; tests/pytest.ini also exists for repos that
# run pytest without the package installed.
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Ruff: lint + format (replaces flake8, isort, black, pyupgrade)
# ---------------------------------------------------------------------------
# The "select" list picks the rule families we want enforced. We
# keep it small on purpose — adding a family you don't actually
# agree with just creates background noise that people ignore.
[tool.ruff]
line-length = 100
target-version = "py310"
# Don't lint third-party / generated / vendored code.
extend-exclude = [
    ".venv",
    ".venv-test",
    "build",
    "dist",
    "_scripts",  # local Windows build helpers, not in the wheel
]

[tool.ruff.lint]
# Start with the high-signal, autofix-friendly rules. F (pyflakes)
# and UP (pyupgrade) catch real bugs. I (isort) keeps imports
# clean. B (bugbear) flags common mistakes. We deliberately leave
# the pylint/pep8-naming families OFF in 0.0.1 — they're noisy
# and the existing codebase has hundreds of pre-existing violations
# that we don't want to bulk-fix in a release-blocker PR.
select = ["F", "I", "B", "UP", "W"]
ignore = [
    # Tests have plenty of intentional magic values and
    # non-snake-case argument names.
    "B008",  # function call in default argument (pytest fixtures)
    "UP031", # % formatting in test strings (intentional for clarity)
]
# Allow the usual __init__.py + conftest.py to be lax on import order.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "UP033"]  # asserts + f-strings in pytest helpers
"tawreed_app/__init__.py" = ["F401"]

[tool.ruff.format]
# Match the existing codebase (we used double quotes + 4-space
# indent in 0.0.1). When we move to a future version we can flip
# these; the lock-in here just makes the diff smaller.
quote-style = "double"
indent-style = "space"
line-ending = "auto"  # preserve CRLF on Windows, LF on Linux/macOS

