[package]
name = "tawreed"
version = "0.0.1"
edition = "2021"
description = "AI-assisted construction procurement packaging workbench"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
calamine = "0.24"
rust_xlsxwriter = "0.64"
pdf-extract = "0.7"
pdfium-render = "0.8"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
image = "0.25"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

