[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.35.0"
rust_xlsxwriter = "0.95.0"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
tokio = "1.52.3"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
directories = "6.0.0"
chrono = "0.4.45"
tauri-plugin-updater = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

